--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,7 +1,7 @@
 <resources>
     <string name="app_name">8-Puzzle</string>
-    <string name="app_title">Sliding Puzzle</string>
-    <string name="preference_file_key">com.gonzales.mark.n_puzzle.PREFERENCE_FILE_KEY</string>
+    <string name="app_title">Puzzle Mpdam</string>
+    <string name="preference_file_key">com.example.mpdam.n_puzzle.PREFERENCE_FILE_KEY</string>
 
     <!-- First button text -->
     <string name="randomizing">Shuffling</string>
@@ -38,8 +38,8 @@
     <!-- Puzzle images -->
     <string name="default_image">CENTRE_VILLE_TUNISIE</string>
     <string-array name="puzzle_images">
-        <item>DJERBA</item>
         <item>CENTRE_VILLE_TUNISIE</item>
+        <item>DJERBA</item>
         <item>SIDI_BOU</item>
         <item>TBARKA</item>
         <item>NABEUL</item>
